--- a/archives/toutiao-search/2023-10-06.md
+++ b/archives/toutiao-search/2023-10-06.md
@@ -1,64 +1,81 @@
 # 2023-10-06
 
-共 258 条
+共 274 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 06 2023 18:00:49 GMT+0800 (China Standard Time) -->
-1. [上海4岁女童海滩走失已超40小时](https://so.toutiao.com/search?keyword=上海4岁女童海滩走失已超40小时)
-1. [全红婵坐经济舱回京 书包挂满乌龟](https://so.toutiao.com/search?keyword=全红婵坐经济舱回京+书包挂满乌龟)
-1. [杭州亚运会铭刻文化自信](https://so.toutiao.com/search?keyword=杭州亚运会铭刻文化自信)
+<!-- 最后更新时间 Fri Oct 06 2023 19:00:50 GMT+0800 (China Standard Time) -->
 1. [搜救队员：女童走失地附近有滩涂](https://so.toutiao.com/search?keyword=搜救队员：女童走失地附近有滩涂)
-1. [中国女篮绝杀日本蝉联亚运冠军](https://so.toutiao.com/search?keyword=中国女篮绝杀日本蝉联亚运冠军)
-1. [泰山脚下老大爷收集登山棍](https://so.toutiao.com/search?keyword=泰山脚下老大爷收集登山棍)
-1. [普京给出俄罗斯使用核武器两个前提](https://so.toutiao.com/search?keyword=普京给出俄罗斯使用核武器两个前提)
-1. [林雨薇荣归故里请全村人吃饭](https://so.toutiao.com/search?keyword=林雨薇荣归故里请全村人吃饭)
-1. [仰头玩手机可以预防颈椎病？不实](https://so.toutiao.com/search?keyword=仰头玩手机可以预防颈椎病？不实)
+1. [走失女童疑似曾原地等候约10分钟](https://so.toutiao.com/search?keyword=走失女童疑似曾原地等候约10分钟)
+1. [杭州亚运会铭刻文化自信](https://so.toutiao.com/search?keyword=杭州亚运会铭刻文化自信)
+1. [海滩走失女童母亲：已扩大搜索范围](https://so.toutiao.com/search?keyword=海滩走失女童母亲：已扩大搜索范围)
 1. [周润发回应裸捐56亿港币](https://so.toutiao.com/search?keyword=周润发回应裸捐56亿港币)
+1. [中国女篮绝杀日本蝉联亚运冠军](https://so.toutiao.com/search?keyword=中国女篮绝杀日本蝉联亚运冠军)
+1. [上海4岁女童海滩走失已超48小时](https://so.toutiao.com/search?keyword=上海4岁女童海滩走失已超48小时)
+1. [男子买羊腿送领导 打开却是大棒骨](https://so.toutiao.com/search?keyword=男子买羊腿送领导+打开却是大棒骨)
+1. [仰头玩手机可以预防颈椎病？不实](https://so.toutiao.com/search?keyword=仰头玩手机可以预防颈椎病？不实)
+1. [王哲林出战首节共4分31秒仅0分1板](https://so.toutiao.com/search?keyword=王哲林出战首节共4分31秒仅0分1板)
 1. [金世佳被娃求抱承认是自己儿子](https://so.toutiao.com/search?keyword=金世佳被娃求抱承认是自己儿子)
-1. [返程聪明人](https://so.toutiao.com/search?keyword=返程聪明人)
-1. [4车相撞1人身亡 全责车记录仪坏了](https://so.toutiao.com/search?keyword=4车相撞1人身亡+全责车记录仪坏了)
+1. [林雨薇荣归故里请全村人吃饭](https://so.toutiao.com/search?keyword=林雨薇荣归故里请全村人吃饭)
 1. [叙利亚军事学院遇袭已致112死240伤](https://so.toutiao.com/search?keyword=叙利亚军事学院遇袭已致112死240伤)
-1. [陈佳鹏的奶奶光荣地戴上了金牌](https://so.toutiao.com/search?keyword=陈佳鹏的奶奶光荣地戴上了金牌)
+1. [司机高速匝道停车致4车追尾](https://so.toutiao.com/search?keyword=司机高速匝道停车致4车追尾)
+1. [全红婵坐经济舱回京 书包挂满乌龟](https://so.toutiao.com/search?keyword=全红婵坐经济舱回京+书包挂满乌龟)
 1. [3个女儿国庆在家全是单身 爸爸愁坏](https://so.toutiao.com/search?keyword=3个女儿国庆在家全是单身+爸爸愁坏)
-1. [新闻联播首位90后女主播亮相](https://so.toutiao.com/search?keyword=新闻联播首位90后女主播亮相)
-1. [直击假期返程高峰](https://so.toutiao.com/search?keyword=直击假期返程高峰)
+1. [中国男篮乔帅时代首次单场得分破百](https://so.toutiao.com/search?keyword=中国男篮乔帅时代首次单场得分破百)
+1. [4车相撞1人身亡 全责车记录仪坏了](https://so.toutiao.com/search?keyword=4车相撞1人身亡+全责车记录仪坏了)
 1. [派出所回应婚礼场地被连夜搬空](https://so.toutiao.com/search?keyword=派出所回应婚礼场地被连夜搬空)
-1. [警方通报女童走失：排除被带离可能](https://so.toutiao.com/search?keyword=警方通报女童走失：排除被带离可能)
+1. [还没从于和伟的“嘘”里走出来](https://so.toutiao.com/search?keyword=还没从于和伟的“嘘”里走出来)
 1. [两干部流出不雅视频被停职](https://so.toutiao.com/search?keyword=两干部流出不雅视频被停职)
 1. [官方通报幼儿园园长与无业男子开房](https://so.toutiao.com/search?keyword=官方通报幼儿园园长与无业男子开房)
+1. [新闻联播首位90后女主播亮相](https://so.toutiao.com/search?keyword=新闻联播首位90后女主播亮相)
+1. [媒体：美国政坛乱成一锅粥了](https://so.toutiao.com/search?keyword=媒体：美国政坛乱成一锅粥了)
+1. [直击假期返程高峰](https://so.toutiao.com/search?keyword=直击假期返程高峰)
+1. [曝美国将敲定对华出口芯片管制新规](https://so.toutiao.com/search?keyword=曝美国将敲定对华出口芯片管制新规)
+1. [10公里游泳马拉松投喂式喝水](https://so.toutiao.com/search?keyword=10公里游泳马拉松投喂式喝水)
+1. [台风小犬将给台湾广东等地带来强风雨](https://so.toutiao.com/search?keyword=台风小犬将给台湾广东等地带来强风雨)
 1. [婚礼场地被村民连夜搬空](https://so.toutiao.com/search?keyword=婚礼场地被村民连夜搬空)
-1. [假期全国出游热门目的地成都排第二](https://so.toutiao.com/search?keyword=假期全国出游热门目的地成都排第二)
 1. [券商人士否认A股将调整交易时间](https://so.toutiao.com/search?keyword=券商人士否认A股将调整交易时间)
-1. [还没从于和伟的“嘘”里走出来](https://so.toutiao.com/search?keyword=还没从于和伟的“嘘”里走出来)
+1. [四川女篮奖励三巨头每人一套房](https://so.toutiao.com/search?keyword=四川女篮奖励三巨头每人一套房)
+1. [返程聪明人](https://so.toutiao.com/search?keyword=返程聪明人)
+1. [住酒店发现摄像头：嫌疑人已被抓获](https://so.toutiao.com/search?keyword=住酒店发现摄像头：嫌疑人已被抓获)
+1. [韩国政府：密切监控日本排放核污水](https://so.toutiao.com/search?keyword=韩国政府：密切监控日本排放核污水)
+1. [警方回应老人被女子扇脸纹丝不动](https://so.toutiao.com/search?keyword=警方回应老人被女子扇脸纹丝不动)
+1. [陈飞宇首次回应弄丢妖猫传的猫](https://so.toutiao.com/search?keyword=陈飞宇首次回应弄丢妖猫传的猫)
+1. [亚运DJ柔术赛前唱《孤勇者》](https://so.toutiao.com/search?keyword=亚运DJ柔术赛前唱《孤勇者》)
+1. [河南一新娘结婚 婆家请人颠花轿](https://so.toutiao.com/search?keyword=河南一新娘结婚+婆家请人颠花轿)
+1. [国际原油价格为何大跌](https://so.toutiao.com/search?keyword=国际原油价格为何大跌)
+1. [王仕鹏为不当言论道歉](https://so.toutiao.com/search?keyword=王仕鹏为不当言论道歉)
+1. [亚运团长霍启刚的一天](https://so.toutiao.com/search?keyword=亚运团长霍启刚的一天)
+1. [辽宁一公园穿练功服老人被狂扇耳光](https://so.toutiao.com/search?keyword=辽宁一公园穿练功服老人被狂扇耳光)
+1. [叙利亚军方炮击反对派武装一指挥部](https://so.toutiao.com/search?keyword=叙利亚军方炮击反对派武装一指挥部)
+1. [深圳供电局：做好防御台风小犬工作](https://so.toutiao.com/search?keyword=深圳供电局：做好防御台风小犬工作)
+1. [假期全国出游热门目的地成都排第二](https://so.toutiao.com/search?keyword=假期全国出游热门目的地成都排第二)
+1. [马术冠军华天感谢杭州观众](https://so.toutiao.com/search?keyword=马术冠军华天感谢杭州观众)
+1. [韩国女篮胜朝鲜队夺得铜牌](https://so.toutiao.com/search?keyword=韩国女篮胜朝鲜队夺得铜牌)
+1. [女子公交车上唱歌向乘客索要费用](https://so.toutiao.com/search?keyword=女子公交车上唱歌向乘客索要费用)
+1. [假期第7天湖南接待游客超256万人次](https://so.toutiao.com/search?keyword=假期第7天湖南接待游客超256万人次)
+1. [外媒：台积电市值蒸发770亿美元](https://so.toutiao.com/search?keyword=外媒：台积电市值蒸发770亿美元)
+1. [上海4岁女童海滩走失已超40小时](https://so.toutiao.com/search?keyword=上海4岁女童海滩走失已超40小时)
+1. [泰山脚下老大爷收集登山棍](https://so.toutiao.com/search?keyword=泰山脚下老大爷收集登山棍)
+1. [普京给出俄罗斯使用核武器两个前提](https://so.toutiao.com/search?keyword=普京给出俄罗斯使用核武器两个前提)
+1. [陈佳鹏的奶奶光荣地戴上了金牌](https://so.toutiao.com/search?keyword=陈佳鹏的奶奶光荣地戴上了金牌)
+1. [警方通报女童走失：排除被带离可能](https://so.toutiao.com/search?keyword=警方通报女童走失：排除被带离可能)
 1. [加拿大总理遭抗议者当街痛骂](https://so.toutiao.com/search?keyword=加拿大总理遭抗议者当街痛骂)
 1. [假期前七天国内出游人数7.54亿人次](https://so.toutiao.com/search?keyword=假期前七天国内出游人数7.54亿人次)
-1. [曝美国将敲定对华出口芯片管制新规](https://so.toutiao.com/search?keyword=曝美国将敲定对华出口芯片管制新规)
-1. [陈飞宇首次回应弄丢妖猫传的猫](https://so.toutiao.com/search?keyword=陈飞宇首次回应弄丢妖猫传的猫)
-1. [四川女篮奖励三巨头每人一套房](https://so.toutiao.com/search?keyword=四川女篮奖励三巨头每人一套房)
-1. [媒体：美国政坛乱成一锅粥了](https://so.toutiao.com/search?keyword=媒体：美国政坛乱成一锅粥了)
 1. [假期最后一天 公安部交管局提示](https://so.toutiao.com/search?keyword=假期最后一天+公安部交管局提示)
-1. [男子买羊腿送领导 打开却是大棒骨](https://so.toutiao.com/search?keyword=男子买羊腿送领导+打开却是大棒骨)
-1. [亚运团长霍启刚的一天](https://so.toutiao.com/search?keyword=亚运团长霍启刚的一天)
 1. [假期进入尾声 各地迎来返程高峰](https://so.toutiao.com/search?keyword=假期进入尾声+各地迎来返程高峰)
 1. [奥运冠军和亚运冠军结婚了](https://so.toutiao.com/search?keyword=奥运冠军和亚运冠军结婚了)
-1. [住酒店发现摄像头：嫌疑人已被抓获](https://so.toutiao.com/search?keyword=住酒店发现摄像头：嫌疑人已被抓获)
 1. [全国铁路迎返程客流高峰](https://so.toutiao.com/search?keyword=全国铁路迎返程客流高峰)
-1. [女子公交车上唱歌向乘客索要费用](https://so.toutiao.com/search?keyword=女子公交车上唱歌向乘客索要费用)
 1. [周润发自曝患糖尿病](https://so.toutiao.com/search?keyword=周润发自曝患糖尿病)
 1. [维多利亚自称家里工薪阶层小贝拆台](https://so.toutiao.com/search?keyword=维多利亚自称家里工薪阶层小贝拆台)
-1. [王仕鹏为不当言论道歉](https://so.toutiao.com/search?keyword=王仕鹏为不当言论道歉)
 1. [颁奖后李梦蹦蹦跳跳地把花送给家人](https://so.toutiao.com/search?keyword=颁奖后李梦蹦蹦跳跳地把花送给家人)
 1. [文旅部估测假期旅游热度创新高](https://so.toutiao.com/search?keyword=文旅部估测假期旅游热度创新高)
-1. [马术冠军华天感谢杭州观众](https://so.toutiao.com/search?keyword=马术冠军华天感谢杭州观众)
 1. [中国男篮28分大胜 收获亚运会铜牌](https://so.toutiao.com/search?keyword=中国男篮28分大胜+收获亚运会铜牌)
 1. [老人90岁生日27个重孙排长队磕头](https://so.toutiao.com/search?keyword=老人90岁生日27个重孙排长队磕头)
-1. [外媒：台积电市值蒸发770亿美元](https://so.toutiao.com/search?keyword=外媒：台积电市值蒸发770亿美元)
 1. [各地旅游火热带动消费市场](https://so.toutiao.com/search?keyword=各地旅游火热带动消费市场)
 1. [正直播中国男篮出战亚运铜牌赛](https://so.toutiao.com/search?keyword=正直播中国男篮出战亚运铜牌赛)
 1. [亚运官方气氛组嗨起来了](https://so.toutiao.com/search?keyword=亚运官方气氛组嗨起来了)
 1. [亚运赛场那些bgm](https://so.toutiao.com/search?keyword=亚运赛场那些bgm)
 1. [媒体揭秘亚运会拉拉队成员如何训练](https://so.toutiao.com/search?keyword=媒体揭秘亚运会拉拉队成员如何训练)
-1. [海滩走失女童母亲：已扩大搜索范围](https://so.toutiao.com/search?keyword=海滩走失女童母亲：已扩大搜索范围)
 1. [警方：海滩走失女童消失在海浪中](https://so.toutiao.com/search?keyword=警方：海滩走失女童消失在海浪中)
 1. [我国科学家发现战略性金属新矿物](https://so.toutiao.com/search?keyword=我国科学家发现战略性金属新矿物)
 1. [游客告别长沙：长沙很好 下次还来](https://so.toutiao.com/search?keyword=游客告别长沙：长沙很好+下次还来)
@@ -129,7 +146,6 @@
 1. [重庆通报“游客不坐船被售票员骂”](https://so.toutiao.com/search?keyword=重庆通报“游客不坐船被售票员骂”)
 1. [张小斐发文告别“林双”](https://so.toutiao.com/search?keyword=张小斐发文告别“林双”)
 1. [华为全液冷超充站上线川藏南线](https://so.toutiao.com/search?keyword=华为全液冷超充站上线川藏南线)
-1. [国际原油价格为何大跌](https://so.toutiao.com/search?keyword=国际原油价格为何大跌)
 1. [女子住家庭式旅馆出小区被收费](https://so.toutiao.com/search?keyword=女子住家庭式旅馆出小区被收费)
 1. [李梦将自己的金牌挂在郑薇脖子上](https://so.toutiao.com/search?keyword=李梦将自己的金牌挂在郑薇脖子上)
 1. [返程天气大变脸 沿海多地发布通知](https://so.toutiao.com/search?keyword=返程天气大变脸+沿海多地发布通知)
